# util/jwt.js
@@ -1,0 +1,22 @@
+const jwt = require('jsonwebtoken');
+
+const generateAccessToken = (user)=> {
+    return jwt.sign(user, process.env.TOKEN_SECRET, { expiresIn: '6h' });
+}
+
+function authenticateToken(req, res, next) {
+    const authHeader = req.headers['authorization']
+    const token = authHeader && authHeader.split(' ')[1]
+  
+    if (token == null) return res.status(401).json({success: false, message: 'Failed to authenticate'})
+  
+    jwt.verify(token, process.env.TOKEN_SECRET, (err, user) => {
+      console.log(err)
+      if (err) return res.status(403).json({success: false, message: 'Failed to authenticate'})
+  
+      req.user = user
+      next()
+    })
+}
+
+module.exports = { authenticateToken, generateAccessToken };
